@@ -5,6 +5,7 @@ next:
          - disallow empty passwords and empty passwords no longer disable password authentication
          - update windows exporter to 0.30.8
          - msi: disable downgrades in windows installer
+         - fix https includes from subsection (#246)
 
 0.35     Fri Jun 13 16:30:25 CEST 2025
          - change showing performance data in check_files and check_services (#243)
